# Revit-MCP

./: .gitignore  .mcp.json.example  README.md
.claude/: settings.json
addin/: RevitMCP.Addin.csproj  RevitMCP.addin  deploy.ps1
addin/src/: RevitMcpApp.cs
addin/src/Commands/: CommandRegistry.cs  ContextGetCommand.cs  DocumentCommand.cs  ElementsQueryCommand.cs  FamiliesSearchCommand.cs  GridsListCommand.cs  HealthCheckCommand.cs  ICommand.cs  LevelsListCommand.cs  ModelSummaryCommand.cs  PlanCommitCommand.cs  PlanPreviewCommand.cs  PlanUndoCommand.cs  TypesListCommand.cs
addin/src/Diagnostics/: AddinLog.cs
addin/src/Plans/: PlanJson.cs  PlanModel.cs  PlanRegistry.cs  SilentFailureHandler.cs
addin/src/Plans/Actions/: FloorActionHandler.cs  HostedInstanceHandler.cs  IActionHandler.cs  LevelActionHandler.cs  RoomActionHandler.cs  WallActionHandler.cs
addin/src/Protocol/: ErrorCodes.cs  Messages.cs
addin/src/Revit/: Categories.cs  DocUnits.cs  ModelRead.cs
addin/src/Server/: PendingRequest.cs  RevitCommandHandler.cs  SessionFile.cs  SocketServer.cs
docs/: 01-problem-statement.md  02-requirements.md  03-architecture.md  04-mcp-tool-contract.md  05-addin-protocol.md  06-data-models.md  07-roadmap.md  08-acceptance-criteria.md  phase-0-setup.md
server/: pyproject.toml
server/revit_mcp/: __init__.py  __main__.py  addin_client.py  protocol.py  server.py  session.py
server/tests/: test_unit.py
server/tools/: stub_addin.py  test_discovery.py  test_health.py  test_lifecycle.py  test_phase3.py  test_phase4.py  test_phase5_ops.py  test_resilience.py
