[project]
name = "revit-mcp-server"
version = "0.0.1"
description = "MCP server bridging Anthropic Claude to Autodesk Revit (Phase 0 skeleton)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
revit-mcp-server = "revit_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revit_mcp"]
